[tool.poetry]
name = "fire_evacuation"
version = "0.1.0"
description = "Agent Based Fire Evacuation Model built using Project Mesa"
authors = ["Ross <git@ross.ch>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
Mesa = "^0.8.9"
numpy = "^1.21.4"
networkx = "^2.6.3"
matplotlib = "^3.5.2"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
black = "^21.11b1"
pydocstyle = "^6.1.1"
bandit = "^1.7.1"
line-profiler = "^3.3.1"

[tool.black]
# Use the more relaxed max line length permitted in PEP8.
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
